// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordRepo find Should find records 1`] = `
{
  "ctx": {
    "requestId": "123465",
    "userId": "0",
  },
  "query": {
    "_source": [Function],
    "bindVars": {
      "@value0": "test_lib",
      "value1": "test_lib",
    },
    "query": "FOR r IN @@value0
SORT r._key ASC
FILTER r.active == true
RETURN MERGE(r, {library: @value1})",
  },
  "withTotalCount": true,
}
`;

exports[`RecordRepo find with filters Should filter records - simple 1`] = `
{
  "ctx": {
    "requestId": "123465",
    "userId": "0",
  },
  "query": {
    "_source": [Function],
    "bindVars": {
      "@value0": "test_lib",
      "@value2": "test_lib",
      "value1": {
        "bindVars": {
          "filterField0": "test_attr",
          "filterValue0": "test",
        },
        "query": "FILTER r.@filterField0 == @filterValue0",
      },
      "value3": {
        "bindVars": {
          "filterField1": "test_attr2",
          "filterValue1": "test2",
        },
        "query": "FILTER r.@filterField1 == @filterValue1",
      },
      "value4": "test_lib",
    },
    "query": "FOR r IN
INTERSECTION((FOR r IN @@value0 @value1 RETURN r), (FOR r IN @@value2 @value3 RETURN r))
SORT r._key ASC
FILTER r.active == true
RETURN MERGE(r, {library: @value4})",
  },
  "withTotalCount": true,
}
`;

exports[`RecordRepo search should search record with from/size params 1`] = `"test_lib"`;

exports[`RecordRepo search should search records 1`] = `"test_lib"`;
